--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FMI Calculator</title>
+</head>
+<body>
+    <div class="container">
+        <h1>FMI Calculator</h1>
+        <form id="fmiForm">
+            <label for="foreheadWidth">Forehead Width (cm):</label>
+            <input type="number" id="foreheadWidth" placeholder="Enter forehead width" required>
+            <label for="foreheadHeight">Forehead Height (cm):</label>
+            <input type="number" id="foreheadHeight" placeholder="Enter forehead height" required>
+            <button type="submit">Calculate FMI</button>
+        </form>
+        <div id="result"></div>
+    </div>
+    <script>
+        const fmiForm = document.getElementById('fmiForm');
+        const resultDiv = document.getElementById('result');
 
+        fmiForm.addEventListener('submit', function (e) {
+            e.preventDefault();
+            const width = parseFloat(document.getElementById('foreheadWidth').value);
+            const height = parseFloat(document.getElementById('foreheadHeight').value);
+            
+            if (!isNaN(width) && !isNaN(height) && width > 0 && height > 0) {
+                const fmi = (width * height).toFixed(2);
+                resultDiv.textContent = `Your Forehead Mass Index (FMI) is: ${fmi}`;
+            } else {
+                resultDiv.textContent = 'Please enter valid positive numbers for both width and height.';
+            }
+        });
+    </script>
+</body>
+</html>
