--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FMI Calculator</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="image.png">
 </head>
 <body>
     <div class="container">
         <h1>FMI Calculator</h1>
         <form id="fmiForm">
-            <label for="mass">Forehead Width (cm):</label>
-            <input type="number" id="mass" placeholder="Enter forehead mass (kg)" required> <\br>
-            <label for="volume">Forehead Height (cm):</label>
-            <input type="number" id="volume" placeholder="Enter forehead volume (m³)" required>
+            <label for="mass">Forehead mass (kg):</label>
+            <input type="number" id="mass" placeholder="e.g 60" required> <br> <br>
+            <label for="volume">Forehead volume (m³):</label>
+            <input type="number" id="volume" placeholder="e.g 30" required> <br> <br>
             <button type="submit">Calculate FMI</button>
         </form>
+        <br>
         <div id="result"></div>
     </div>
     <script>
