--- a/index.html
+++ b/index.html
@@ -10,28 +10,30 @@
     </head>
 
     <body>
-        <div class="container">
-            <h1>Calculate your Forehead Mass Index (FMI)</h1>
-            <i id="note">Note: <b>All foreheads are equal.</b> Your FMI is not a measure of your 
-                abilities in any aspect, including: physical, mental, emotional, spiritual,
-                financial, intellectual, social, psychological, biological, professional,
-                relational, grammatical, cultural, moral, ethical, political, environmental,
-                practical, theoretical, personal or interpersonal capabilities.</i>
-            <form id="fmiForm">
-            <br> <br>
-                <label for="mass">Forehead mass (kg):</label>
-                <input type="number" id="mass" placeholder="e.g 60" required> <br> <br>
-                <label for="volume">Forehead volume (m³):</label>
-                <input type="number" id="volume" placeholder="e.g 30" required> <br> <br>
-                <button type="submit">Calculate FMI</button>
-            </form>
-            <br>
-            <div id="result"></div>
-            <img id="result_image" src="no_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="small_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="average_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="big_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="infinite_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+        <div class="heading">
+            <h1>Calculate Forehead Mass Index (FMI)</h1>
         </div>
+        <p id="note">Note: <b>All foreheads are equal.</b><i> Your FMI is not a measure of your 
+            abilities in any aspect, including: physical, mental, emotional, spiritual,
+            financial, intellectual, social, psychological, biological, professional, 
+            relational, grammatical, cultural, moral, ethical, political, environmental,
+            practical, theoretical, personal or interpersonal capabilities.</i></p>
+        <form id="fmiForm">
+            <br>
+            <label for="mass">Forehead mass (kg):</label>
+            <input type="number" id="mass" placeholder="e.g 60" required> <br> <br>
+            <label for="volume">Forehead volume (m³):</label>
+            <input type="number" id="volume" placeholder="e.g 30" required> <br> <br>
+            <button type="submit">Calculate</button>
+        </form>
+        <br>
+        <div id="result"></div>
+        <!--
+        <img id="result_image" src="no_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+        <img id="result_image" src="small_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+        <img id="result_image" src="average_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+        <img id="result_image" src="big_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+        <img id="result_image" src="infinite_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+        -->
     </body>
 </html>
