--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <title>FMI Calculator</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="image.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Henny+Penny&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Chewy&family=Henny+Penny&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap" rel="stylesheet">
         <script source="script.js"></script>
     </head>
 
@@ -13,20 +19,34 @@
         <div class="heading">
             <h1>Calculate Forehead Mass Index (FMI)</h1>
         </div>
-        <p id="note">Note: <b>All foreheads are equal.</b><i> Your FMI is not a measure of your 
-            abilities in any aspect, including: physical, mental, emotional, spiritual,
-            financial, intellectual, social, psychological, biological, professional, 
-            relational, grammatical, cultural, moral, ethical, political, environmental,
-            practical, theoretical, personal or interpersonal capabilities.</i></p>
         <form id="fmiForm">
-            <br>
-            <label for="mass">Forehead mass (kg):</label>
+            <label for="name">Forehead Name:</label>
+            <input type="text" id="name" placeholder="e.g Rick Astley"> <br> <br>
+            <label for="mass">Forehead Mass (kg):</label>
             <input type="number" id="mass" placeholder="e.g 60" required> <br> <br>
-            <label for="volume">Forehead volume (m³):</label>
+            <label for="volume">Forehead Volume (m³):</label>
             <input type="number" id="volume" placeholder="e.g 30" required> <br> <br>
-            <button type="submit">Calculate</button>
+            <label for="color">Forehead Colour</label>
+            <input type="color" id="color" placeholder="e.g 30"> <br> <br>
+            <label for="gender">Forehead Gender:</label>
+            <input type="password" id="gender" placeholder="e.g Male"> <br> <br>
+
+            <label>How would other people describe your Forehead's Personality?</label> <br>
+            <input type="radio" id="shiny" name="shine" value="super_shiny">
+            <label for="shiny">Zen Vibes</label>
+            <input type="radio" id="dull" name="shine" value="kinda_shiny">
+            <label for="dull">Lowkey Savage</label>
+            <input type="radio" id="dull" name="shine" value="kinda_shiny">
+            <label for="dull">Suffering in Silence</label>
+            <input type="radio" id="shiny" name="shine" value="super_shiny">
+            <label for="shiny">Rizz</label>
+            <input type="radio" id="shiny" name="shine" value="super_shiny">
+            <label for="shiny">Big Brain Energy</label> <br> <br>
+            
+            <label for="age">I have read the <a href="tos.html" target="_blank">Terms Of Service</a> & appreciate my Forehead</label>
+            <input type="checkbox" id="age" required> <br> <br>
+            <button type="sub mit">Calculate</button>
         </form>
-        <br>
         <div id="result"></div>
         <!--
         <img id="result_image" src="no_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
