--- a/tos.html
+++ b/tos.html
@@ -20,10 +20,10 @@
             <h1>Terms of Service</h1>
         </div>
         
-        <h2 id="note"><i><b>By using our website you (and your forehead) agree to the following:</b></i></h2>
+        <h2 id="note"><b>By using our website you (& your forehead) agree to the following:</b></h2>
 
         <ol>
-            <li id="note"><i><b>All foreheads are equal.</b></i></li>
+            <li id="note"><i>All foreheads are equal.</i></li>
             
             <li id="note"><i>Your FMI is not a measure of your 
                 abilities in any aspect, including: physical, mental, emotional, spiritual,
