Organised Images & Added result.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FMI Calculator</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="image.png">
+        <link rel="icon" type="image/png" href="images/icon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
         <div class="heading">
             <h1>Calculate Forehead Mass Index (FMI)</h1>
         </div>
-        <form id="fmiForm">
+        <form id="fmiForm" action="result.html" method="get">
             <label for="name">Forehead Name:</label>
             <input type="text" id="name" class="input_text" placeholder="e.g Rick Astley"> <br> <br>
             <label for="mass">Forehead Mass (kg):</label>
