Bug Fixes in Form

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
              </select> <br> <br>
 
             <label>How would other people describe your forehead's personality?</label> <br>
-            <input type="radio" id="shiny" name="shine" value="super_shiny">
+            <input type="radio" id="Zen-Vibes" name="forehead-personality" value="Zen-Vibes" required>
             <label for="shiny">Zen Vibes</label>
-            <input type="radio" id="dull" name="shine" value="kinda_shiny">
+            <input type="radio" id="Lowkey-Savage" name="forehead-personality" value="Lowkey-Savage">
             <label for="dull">Lowkey Savage</label>
-            <input type="radio" id="dull" name="shine" value="kinda_shiny">
+            <input type="radio" id="Suffering-in-Silence" name="forehead-personality" value="Suffering-in-Silence">
             <label for="dull">Suffering in Silence</label>
-            <input type="radio" id="shiny" name="shine" value="super_shiny">
+            <input type="radio" id="Very-Handsome" name="forehead-personality" value="Very-Handsome">
             <label for="shiny">Very Handsome</label>
-            <input type="radio" id="shiny" name="shine" value="super_shiny">
+            <input type="radio" id="Big-Brain-Energy" name="forehead-personality" value="Big-Brain-Energy">
             <label for="shiny">Big Brain Energy</label> <br> <br>
             
             <label for="age">I have read the <a href="tos.html" target="_blank">Terms Of Service</a> & appreciate my Forehead</label>
             <input type="checkbox" id="age" required> <br> <br>
-            <button type="sub mit">Calculate</button>
+            <button type="submit">Calculate</button>
         </form>
         <div id="result"></div>
         <!--
