--- a/tos.html
+++ b/tos.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FMI Calculator</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="image.png">
+        <link rel="icon" type="image/png" href="images/icon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
