--- a/result.html
+++ b/result.html
@@ -19,5 +19,14 @@
         <div class="heading">
             <h1>Result</h1>
         </div>
+        <div id="result">
+            <!--
+            <img id="result_image" src="no_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+            <img id="result_image" src="small_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+            <img id="result_image" src="average_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+            <img id="result_image" src="big_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+            <img id="result_image" src="infinite_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
+            -->
+        </div>
     </body>
 </html>
