--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="heading">
             <h1>Calculate Forehead Mass Index (FMI)</h1>
         </div>
-        <form id="fmi_form" action="result.html" method="get">
+        <form id="fmi_form" <!--action="result.html"method="get"-->
             <label for="name">Forehead Name:</label>
             <input type="text" id="name" class="input_text" placeholder="e.g Rick Astley"> <br> <br>
             <label for="mass">Forehead Mass (kg):</label>
