--- a/tos.html
+++ b/tos.html
@@ -12,7 +12,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Henny+Penny&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Chewy&family=Henny+Penny&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap" rel="stylesheet">
-        <script src="script.js"></script>
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
 
     <body>
@@ -20,18 +21,27 @@
             <h1>Terms of Service</h1>
         </div>
         
-        <h2 id="note"><b>By using our website you (& your forehead) agree to the following:</b></h2>
+        <h2 id="note"><b>By using our website you (and your forehead) agree to the following:</b></h2>
 
         <ol>
-            <li id="note"><i>All foreheads are equal.</i></li>
+            <li id="note">All foreheads are equal.</li>
             
-            <li id="note"><i>Your FMI is not a measure of your 
+            <li id="note">Your FMI is not a measure of your 
                 abilities in any aspect, including: physical, mental, emotional, spiritual,
                 financial, intellectual, social, psychological, biological, professional, 
                 relational, grammatical, cultural, moral, ethical, political, environmental,
                 practical, theoretical, personal or interpersonal capabilities.</i></li>
+            <li id ="note">
+                As part of our calculations, the Forehead Mass Index (FMI) is defined as:
 
-            <li id="note"><i>If you have any questions about the Website, please contact us at 3omargaad@gmail.com (It's a real email btw)</i></li>
+                <p>
+                    \[
+                    \text{FMI} = 50 + \frac{\text{volume} - \text{mass}}{4} + X_{\text{factors}}
+                    \]
+                </p>
+            </i></li>
+
+            <li id="note">If you have any questions about the website, contact us at 3omargaad@gmail.com (It's a real email btw)</li>
         </ol>
     </body>
 </html>
