--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
             <label>How would other people describe your forehead's personality?</label> <br>
             <input type="radio" id="Zen-Vibes" name="personality" value="Zen-Vibes">
-            <label for="Zen-Vibes">Zen Vibes</label>
+            <label class="personality-label" for="Zen-Vibes">Zen Vibes</label>
             <input type="radio" id="Lowkey-Savage" name="personality" value="Lowkey-Savage">
-            <label for="Lowkey-Savage">Lowkey Savage</label>
+            <label class="personality-label" for="Lowkey-Savage">Lowkey Savage</label>
             <input type="radio" id="Suffering-in-Silence" name="personality" value="Suffering-in-Silence" required>
-            <label for="Suffering-in-Silence">Suffering in Silence</label>
+            <label class="personality-label" for="Suffering-in-Silence">Suffering in Silence</label>
             <input type="radio" id="Very-Handsome" name="personality" value="Very-Handsome">
-            <label for="Very-Handsome">Very Handsome</label>
+            <label class="personality-label" for="Very-Handsome">Very Handsome</label>
             <input type="radio" id="Big-Brain-Energy" name="personality" value="Big-Brain-Energy">
-            <label for="Big-Brain-Energy">Big Brain Energy</label> <br> <br>
+            <label class="personality-label" for="Big-Brain-Energy">Big Brain Energy</label> <br> <br>
             
             <label for="age">I have read the <a href="tos.html" target="_blank">Terms Of Service</a> & appreciate my Forehead</label>
             <input type="checkbox" id="age" required> <br> <br>
