--- a/result.html
+++ b/result.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FMI Calculator</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style/style.css">
         <link rel="icon" type="image/png" href="images/icon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,21 +12,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Henny+Penny&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Chewy&family=Henny+Penny&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap" rel="stylesheet">
-        <script src="script.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+        <script src="scripts/result.js"></script>
     </head>
 
     <body>
         <div class="heading">
-            <h1>Result</h1>
+            <h1>You have No Forehead</h1>
         </div>
         <div id="result">
-            <!--
-            <img id="result_image" src="no_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="small_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="average_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="big_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="infinite_forehead.jpg" alt="Forehead Image" width="450px" height="500px"/>
-            -->
+            <img id="result_image" src="images/no_forehead.png" alt="Forehead Image" width="450px" height="500px"/> 
+            <!--<img id="result_image" src="images/small_forehead.png" alt="Forehead Image" width="450px" height="500px"/>
+            <img id="result_image" src="images/average_forehead.png" alt="Forehead Image" width="450px" height="500px"/>
+            <img id="result_image" src="images/big_forehead.png" alt="Forehead Image" width="450px" height="500px"/>
+            <img id="result_image" src="images/infinite_forehead.png" alt="Forehead Image" width="450px" height="500px"/>-->
         </div>
+        <p id="fmi_result"></p>
     </body>
 </html>
