--- a/tos.html
+++ b/tos.html
@@ -30,7 +30,7 @@
             <li id ="note">
                 As part of our calculations, the Forehead Mass Index (FMI) is defined as:
 
-                <p>
+                <p id="latex">
                     \[
                     \text{FMI} = 50 + \frac{\text{volume} - \text{mass}}{4} + X_{\text{factors}}
                     \]
