Sharing Buttons Added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/fonts.css">
         <link rel="icon" type="image/png" href="images/icon.png">
+        <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=679be0c09b23f50012715ad4&product=inline-share-buttons&source=platform" async="async"></script>
     </head>
 
     <body>
@@ -47,5 +48,6 @@
             <button type="submit">Calculate</button>
         </form>
         <script src="scripts/index.js"></script>
+        <div class="sharethis-inline-share-buttons"></div>
     </body>
 </html>
