Properly Added Sharing Buttons

--- a/tos.html
+++ b/tos.html
@@ -10,6 +10,7 @@
         
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=679be0c09b23f50012715ad4&product=inline-share-buttons&source=platform" async="async"></script>
     </head>
 
     <body>
@@ -39,5 +40,8 @@
 
             <li id="note">If you have any questions about the website, contact us at 3omargaad@gmail.com (It's a real email btw)</li>
         </ol>
+        
+        <br><br>
+        <div class="sharethis-inline-share-buttons"></div>
     </body>
 </html>
