--- a/result.html
+++ b/result.html
@@ -4,25 +4,36 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FMI Calculator</title>
+
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/fonts.css">
+        <!--CSS Link-->
+
         <link rel="icon" type="image/png" href="images/icon.png">
+        <!--Icon Link-->
+
         <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=679be0c09b23f50012715ad4&product=inline-share-buttons&source=platform" async="async"></script>
+        <!--Share Buttons Link-->
     </head>
 
     <body>
         <div class="heading">
             <h2 id="forehead_type">Result</h2>
         </div>
+        <!--Heading-->
+
         <div id="result">
             <img id="result_image" src="images/placeholder.gif" alt="Forehead Image" width="450px" height="500px"/> 
-            <!--<img id="result_image" src="images/small_forehead.png" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="images/average_forehead.png" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="images/big_forehead.png" alt="Forehead Image" width="450px" height="500px"/>
-            <img id="result_image" src="images/infinite_forehead.png" alt="Forehead Image" width="450px" height="500px"/>-->
         </div>
+        <!--Image-->
+
         <h5 id="fmi_result">FMI: ${fmi} <br> Forehead Type:</h5>
+        <!--FMI and Forehead Type Label-->
+
         <script src="scripts/result.js"></script>
+        <!--Main Script to load results-->
+
         <div class="sharethis-inline-share-buttons"></div>
+        <!--Share Buttons-->
     </body>
 </html>
