--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <input type="number" id="mass" class="input_text" placeholder="0-100" min="0", max="100" required> <br> <br>
             <!--Forehead Mass-->
 
-            <label for="volume">Forehead Volume (m³):</label>
+            <label for="volume">Forehead Volume (cm³):</label>
             <input type="number" id="volume" class="input_text" placeholder="0-100" min="0", max="100" required> <br> <br>
             <!--Forehead Volume-->
 
