--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="style/fonts.css"> 
         <!--CSS Links-->
-
+        <link rel="icon" href="favicon.ico" type="image/icon.png">
         <link rel="icon" type="image/png" href="images/icon.png">
         <!--Icon Link-->
 
         <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=679be0c09b23f50012715ad4&product=inline-share-buttons&source=platform" async="async"></script> 
         <!--Share Buttons Link-->
+
+        <meta name="description" content="Forehead Mass Index (FMI) - calculate your forehead mass index easily.">
+        <meta name="keywords" content="forehead mass index, FMI calculator, forehead calculator, forehead, mass index, calculator">
+        <meta name="author" content="Omar Gaad">
+        <link rel="canonical" href="https://3omargaad.github.io/FMI/">
+        <meta property="og:title" content="Forehead Mass Index (FMI) Calculator">
+        <meta property="og:description" content="Calculate your Forehead Mass Index (FMI) quickly and easily online.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://3omargaad.github.io/FMI/">
+        <meta property="og:image" content="https://3omargaad.github.io/FMI/images/icon.png">
+        <!--SEO-->
     </head>
 
     <body>
